# file-reader

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  rust-toolchain.toml
src/: main.rs
templates/: debug.html.hbs  detail.html.hbs  error.html.hbs  index.html.hbs  index.html.tera  login.html.hbs  search.html.hbs
templates/static/: zepto.js
