[package]
name = "file_reader"
version = "0.1.0"
authors = ["chenpinzhuo <495928509>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.8"}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4.11"
grep = "0.2.6"
clap = "2.33.3"
reqwest = "0.9.22"
multipart = "0.18.0"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["handlebars_templates", "serve", "json"]

